test/interaction/Issue7863.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Bool ?1 : Bool ?2 : Bool ?3 : Bool ?4 : Bool ?5 : Bool ?6 : Bool ?7 : Bool ?8 : Bool " nil)
((last . 1) . (agda2-goals-action '(0 1 2 3 4 5 6 7 8)))
(agda2-verbose "splitting clause: f = uu context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:8.8-16: error: [Interaction.CaseSplitError] a name cannot contain two consecutive underscores when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 191)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = num context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:14.9-17: error: [Interaction.CaseSplitError] in the name 42, the part 42 is not valid because it is a literal when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 332)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = semi context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:20.10-17: error: [Interaction.CaseSplitError] in the name ;, the part ; is not valid because it is used to separate declarations when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 490)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = par context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:26.9-18: error: [Interaction.CaseSplitError] in the name (x), the part (x) is not valid because it is used to parenthesize expressions when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 663)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = dd context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:32.8-15: error: [Interaction.CaseSplitError] in the name .., the part .. is not valid because it is a modality when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 843)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = pragma context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:38.12-20: error: [Interaction.CaseSplitError] in the name {-#, the part {-# is not valid because it is used for pragmas when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 994)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-verbose "splitting clause: f = qual context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:44.10-18: error: [Interaction.CaseSplitError] in the name M.d, the part M.d is not valid because it is qualified when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 1149)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
cannot read: IOTCM "Issue7863.agda" None Indirect (Cmd_make_case 7 noRange "\")x\""
(agda2-verbose "splitting clause: f = con context = (x : Bool) tel = (x : Bool) perm = x0 -> x0 ps = [x₁] ell = NoEllipsis type = Bool")
(agda2-verbose "parseVariables: current module = Issue7863 current section = clause context = (x₁ : Bool)")
(agda2-info-action "*Error*" "Issue7863.agda:56.9-26: error: [Interaction.CaseSplitError] in the name constructor, the part constructor is not valid because it is a keyword when checking that the expression ? has type Bool" nil)
((last . 3) . (agda2-maybe-goto '("Issue7863.agda" . 1441)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
